# NSUBasics-of-OOP-lab0

./: .gitignore
Lab0a/: CMakeLists.txt  main.cpp
Lab0a/module2/: CMakeLists.txt
Lab0b/: CMakeLists.txt  Main.cpp  README.md  input.txt  output.csv  wordstat
Lab1/: CMakeLists.txt  README.md  Tests.cpp
Lab1/CircularBuffer/: CircularBuffer.cpp  CircularBuffer.h
Lab2/: CMakeLists.txt  Game.cpp  Game.h  Grid.cpp  Main.cpp  README.md  Universe.life  main  u.life
Lab3/: CMakeLists.txt  CommandStructure.h  Lab3  Main.cpp  README.md  Tests.cpp  config.txt
Lab3/SoundProcessor/: CMakeLists.txt  SoundProcessor.cpp  SoundProcessor.h
Lab3/SoundProcessor/Config/: CMakeLists.txt  Config.cpp  Config.h
Lab3/SoundProcessor/Converters/: CMakeLists.txt  Converters.cpp  Converters.h
Lab3/SoundProcessor/WavHandler/: CMakeLists.txt  WavHandler.cpp  WavHandler.h
Lab4/: CMakeLists.txt  ChatGPTsCode.cpp  CsvIterator.h  CsvParser.h  Lab4  Main.cpp  README.md  Table.csv  TupleTools.h
Lab4/Other/: Full.cpp  gpt
Theory/: Map.md  Working With Files.md
